folders for results, and saving results in folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,windows,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,windows,pycharm
 
+ca-traffic-simulation-master/*
+
 ### macOS ###
 # General
 .DS_Store
